--- a/daili2.yaml
+++ b/daili2.yaml
@@ -41,12 +41,12 @@ proxies:
   password: desperadoj.com_free_proxy_d39m
   cipher: aes-128-gcm
   success_rate: 100.0
-  minimum: 6.27
-  maximum: 7.91
-  average: 7.31
-  UpdateDay: '2022-05-03T18:32:24.059384'
+  minimum: 6.66
+  maximum: 7.63
+  average: 7.25
+  UpdateDay: '2022-05-03T21:30:29.278807'
   PFirstFoundDay: '2022-03-13T18:26:52.937942'
-  Rank: 29334
+  Rank: 29435
 - name: music.desperadoj.com:30003@ss
   server: music.desperadoj.com
   type: ss
@@ -60,21 +60,20 @@ proxies:
   average: 10.11
   UpdateDay: '2022-05-03T18:30:50.145520'
   PFirstFoundDay: '2022-03-14T10:17:16.436055'
-  Rank: 25956
+  Rank: 26056
 - name: 101.91.121.247:50004@ss
-  server: 101.91.121.247
   type: ss
-  country: "\U0001F1E8\U0001F1F3CN"
+  server: 101.91.121.247
   port: 50004
-  password: '4415934295'
   cipher: aes-256-cfb
+  password: '4415934295'
   success_rate: 100.0
-  minimum: 11.05
-  maximum: 11.45
-  average: 11.19
-  UpdateDay: '2022-05-03T18:30:50.122828'
+  minimum: 10.47
+  maximum: 13.14
+  average: 12.07
+  UpdateDay: '2022-05-03T21:30:29.269990'
   PFirstFoundDay: '2022-03-11T23:29:04.876882'
-  Rank: 22440
+  Rank: 22451
 - name: 106.180.225.69:1443@trojan
   server: 106.180.225.69
   port: 1443
@@ -84,12 +83,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 81.19
-  maximum: 111.48
-  average: 91.93
-  UpdateDay: '2022-05-03T18:32:24.595467'
+  minimum: 63.14
+  maximum: 101.98
+  average: 78.7
+  UpdateDay: '2022-05-03T21:30:30.541704'
   PFirstFoundDay: '2022-03-11T23:05:01.549769'
-  Rank: 19734
+  Rank: 19785
 - name: fkgfw-prod.i.sxl.cn:443@ss
   server: fkgfw-prod.i.sxl.cn
   port: 443
@@ -102,22 +101,22 @@ proxies:
   average: 89.1
   UpdateDay: '2022-03-24T18:35:12.668742'
   PFirstFoundDay: '2022-03-19T12:33:06.851449'
-  Rank: 15912
+  Rank: 15847
 - name: hk-hkg-sh-hk-02-tr.cdn.savoy.click:21089@trojan
   server: hk-hkg-sh-hk-02-tr.cdn.savoy.click
-  type: trojan
-  country: "\U0001F1E8\U0001F1F3CN"
   port: 21089
+  type: trojan
+  country: "\U0001F1E8\U0001F1F3 CN"
   password: SfobRIcergHchqBFzzua
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 33.83
-  maximum: 41.85
-  average: 37.85
-  UpdateDay: '2022-05-03T18:30:50.225168'
+  minimum: 11.13
+  maximum: 69.7
+  average: 40.39
+  UpdateDay: '2022-05-03T21:30:29.360552'
   PFirstFoundDay: '2022-03-13T18:25:41.957547'
-  Rank: 15081
+  Rank: 15172
 - name: 2.58.242.43:443@trojan
   server: 2.58.242.43
   port: 443
@@ -127,27 +126,27 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 93.13
-  maximum: 109.31
-  average: 100.11
-  UpdateDay: '2022-05-03T18:32:25.259216'
+  minimum: 75.62
+  maximum: 83.51
+  average: 79.87
+  UpdateDay: '2022-05-03T21:30:32.822105'
   PFirstFoundDay: '2022-03-14T21:36:22.498526'
-  Rank: 14838
+  Rank: 14870
 - name: 210.152.13.168:443@trojan
   server: 210.152.13.168
-  type: trojan
-  country: "\U0001F1EF\U0001F1F5JP"
   port: 443
+  type: trojan
+  country: "\U0001F1EF\U0001F1F5 JP"
   password: 18e513fe-f7f4-353d-84ca-bc9646fb2528mielink
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 54.75
-  maximum: 69.5
-  average: 61.3
-  UpdateDay: '2022-05-03T18:31:08.259371'
+  minimum: 175.33
+  maximum: 1292.63
+  average: 575.77
+  UpdateDay: '2022-05-03T21:30:32.038695'
   PFirstFoundDay: '2022-03-21T15:31:51.301146'
-  Rank: 14551
+  Rank: 14587
 - name: hk-hkg-shhk-001-tr.cdn.savoy.click:20089@trojan
   server: hk-hkg-shhk-001-tr.cdn.savoy.click
   port: 20089
@@ -157,27 +156,27 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 10.77
-  maximum: 12.7
-  average: 11.94
-  UpdateDay: '2022-05-03T18:32:24.130235'
+  minimum: 30.67
+  maximum: 72.18
+  average: 47.7
+  UpdateDay: '2022-05-03T21:30:29.380076'
   PFirstFoundDay: '2022-03-13T18:26:01.142104'
-  Rank: 12690
+  Rank: 12771
 - name: jp-tyo-04-tr.cdn.savoy.click:889@trojan
   server: jp-tyo-04-tr.cdn.savoy.click
-  type: trojan
-  country: "\U0001F1E8\U0001F1F3CN"
   port: 889
-  password: SfobRIcergHchqBFzzua
+  type: trojan
+  country: "\U0001F1E8\U0001F1F3 CN"
+  password: UiLPqefVfielqkDjEwBV
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 39.76
-  maximum: 44.98
-  average: 42.26
-  UpdateDay: '2022-05-03T18:30:50.233509'
+  minimum: 44.89
+  maximum: 49.08
+  average: 46.52
+  UpdateDay: '2022-05-03T21:30:29.406251'
   PFirstFoundDay: '2022-03-20T12:36:16.101193'
-  Rank: 8800
+  Rank: 8849
 - alterId: 0
   cipher: auto
   http-opts:
@@ -202,7 +201,7 @@ proxies:
   average: 236.71
   UpdateDay: '2022-03-21T00:35:16.437700'
   PFirstFoundDay: '2022-03-14T10:30:07.032005'
-  Rank: 8755
+  Rank: 8799
 - name: 72.167.45.6:443@trojan
   server: 72.167.45.6
   port: 443
@@ -212,12 +211,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 268.32
-  maximum: 269.0
-  average: 268.76
-  UpdateDay: '2022-05-03T18:32:25.779203'
+  minimum: 176.66
+  maximum: 203.66
+  average: 187.99
+  UpdateDay: '2022-05-03T21:30:33.424541'
   PFirstFoundDay: '2022-03-31T09:34:10.783687'
-  Rank: 6177
+  Rank: 6218
 - name: tky3.ssgnode.ga:443@trojan
   server: tky3.ssgnode.ga
   port: 443
@@ -227,12 +226,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 66.96
-  maximum: 74.21
-  average: 71.38
-  UpdateDay: '2022-05-03T18:32:24.542217'
+  minimum: 43.71
+  maximum: 48.57
+  average: 45.34
+  UpdateDay: '2022-05-03T21:30:30.446014'
   PFirstFoundDay: '2022-03-31T03:35:27.638826'
-  Rank: 5974
+  Rank: 6076
 - name: www.zx07.top:443@trojan
   server: www.zx07.top
   port: 443
@@ -242,12 +241,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 49.78
-  maximum: 76.22
-  average: 60.89
-  UpdateDay: '2022-05-03T18:32:24.461183'
+  minimum: 38.19
+  maximum: 46.64
+  average: 41.6
+  UpdateDay: '2022-05-03T21:30:30.399378'
   PFirstFoundDay: '2022-03-13T18:24:17.598383'
-  Rank: 5948
+  Rank: 6026
 - name: 184.168.127.50:443@trojan
   server: 184.168.127.50
   port: 443
@@ -257,12 +256,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 248.14
-  maximum: 249.57
-  average: 248.89
-  UpdateDay: '2022-05-03T18:32:25.719696'
+  minimum: 252.16
+  maximum: 257.42
+  average: 254.07
+  UpdateDay: '2022-05-03T21:30:33.659322'
   PFirstFoundDay: '2022-03-16T00:32:54.032660'
-  Rank: 5905
+  Rank: 5932
 - name: www.tokyo2023.ga:443@trojan
   server: www.tokyo2023.ga
   port: 443
@@ -272,12 +271,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 46.9
-  maximum: 70.56
-  average: 59.11
-  UpdateDay: '2022-05-03T18:32:25.149231'
+  minimum: 46.81
+  maximum: 54.53
+  average: 50.2
+  UpdateDay: '2022-05-03T21:30:33.048328'
   PFirstFoundDay: '2022-03-14T10:29:40.191643'
-  Rank: 5636
+  Rank: 5703
 - name: 45.9.10.103:443@trojan
   server: 45.9.10.103
   type: trojan
@@ -292,7 +291,7 @@ proxies:
   average: 162.13
   UpdateDay: '2022-03-30T11:21:53.634848'
   PFirstFoundDay: '2022-03-23T09:35:36.105483'
-  Rank: 5579
+  Rank: 5629
 - name: cscu.wecanfly.top:51132@trojan
   server: cscu.wecanfly.top
   port: 51132
@@ -307,7 +306,7 @@ proxies:
   average: 39.38
   UpdateDay: '2022-04-03T15:12:55.533673'
   PFirstFoundDay: '2022-03-13T18:25:19.181411'
-  Rank: 5492
+  Rank: 5342
 - name: www.gomacau.gq:443@trojan
   server: www.gomacau.gq
   type: trojan
@@ -322,7 +321,7 @@ proxies:
   average: 61.31
   UpdateDay: '2022-04-02T15:35:09.325376'
   PFirstFoundDay: '2022-03-14T10:28:14.224892'
-  Rank: 5014
+  Rank: 5099
 - name: www.ggchk.ga:443@trojan
   password: 4ae98d26-b209-4dd5-8e91-bf11d4f10801
   port: 443
@@ -334,7 +333,7 @@ proxies:
   average: 56.06
   UpdateDay: '2022-04-03T15:12:54.456600'
   PFirstFoundDay: '2022-03-11T21:04:39.779731'
-  Rank: 4884
+  Rank: 4974
 proxy-groups:
 - name: PG-default
   type: fallback
