--- a/daili.yaml
+++ b/daili.yaml
@@ -46,7 +46,7 @@ proxies:
   average: 7.25
   UpdateDay: '2022-05-03T21:30:29.278807'
   PFirstFoundDay: '2022-03-13T18:26:52.937942'
-  Rank: 29535
+  Rank: 29635
 - name: music.desperadoj.com:30003@ss
   server: music.desperadoj.com
   type: ss
@@ -60,7 +60,7 @@ proxies:
   average: 10.11
   UpdateDay: '2022-05-03T18:30:50.145520'
   PFirstFoundDay: '2022-03-14T10:17:16.436055'
-  Rank: 26156
+  Rank: 26256
 - name: 101.91.121.247:50004@ss
   type: ss
   server: 101.91.121.247
@@ -73,7 +73,7 @@ proxies:
   average: 12.07
   UpdateDay: '2022-05-03T21:30:29.269990'
   PFirstFoundDay: '2022-03-11T23:29:04.876882'
-  Rank: 22461
+  Rank: 22471
 - name: 106.180.225.69:1443@trojan
   server: 106.180.225.69
   port: 1443
@@ -88,7 +88,7 @@ proxies:
   average: 78.7
   UpdateDay: '2022-05-03T21:30:30.541704'
   PFirstFoundDay: '2022-03-11T23:05:01.549769'
-  Rank: 19835
+  Rank: 19890
 - name: fkgfw-prod.i.sxl.cn:443@ss
   server: fkgfw-prod.i.sxl.cn
   port: 443
@@ -101,7 +101,7 @@ proxies:
   average: 89.1
   UpdateDay: '2022-03-24T18:35:12.668742'
   PFirstFoundDay: '2022-03-19T12:33:06.851449'
-  Rank: 15823
+  Rank: 15802
 - name: hk-hkg-sh-hk-02-tr.cdn.savoy.click:21089@trojan
   server: hk-hkg-sh-hk-02-tr.cdn.savoy.click
   port: 21089
@@ -116,7 +116,7 @@ proxies:
   average: 40.39
   UpdateDay: '2022-05-03T21:30:29.360552'
   PFirstFoundDay: '2022-03-13T18:25:41.957547'
-  Rank: 15267
+  Rank: 15362
 - name: 2.58.242.43:443@trojan
   server: 2.58.242.43
   port: 443
@@ -131,7 +131,7 @@ proxies:
   average: 79.87
   UpdateDay: '2022-05-03T21:30:32.822105'
   PFirstFoundDay: '2022-03-14T21:36:22.498526'
-  Rank: 14860
+  Rank: 14848
 - name: 210.152.13.168:443@trojan
   server: 210.152.13.168
   port: 443
@@ -146,7 +146,7 @@ proxies:
   average: 575.77
   UpdateDay: '2022-05-03T21:30:32.038695'
   PFirstFoundDay: '2022-03-21T15:31:51.301146'
-  Rank: 14642
+  Rank: 14677
 - name: hk-hkg-shhk-001-tr.cdn.savoy.click:20089@trojan
   server: hk-hkg-shhk-001-tr.cdn.savoy.click
   port: 20089
@@ -161,7 +161,7 @@ proxies:
   average: 47.7
   UpdateDay: '2022-05-03T21:30:29.380076'
   PFirstFoundDay: '2022-03-13T18:26:01.142104'
-  Rank: 12861
+  Rank: 12956
 - name: jp-tyo-04-tr.cdn.savoy.click:889@trojan
   server: jp-tyo-04-tr.cdn.savoy.click
   port: 889
@@ -176,7 +176,7 @@ proxies:
   average: 46.52
   UpdateDay: '2022-05-03T21:30:29.406251'
   PFirstFoundDay: '2022-03-20T12:36:16.101193'
-  Rank: 8899
+  Rank: 8949
 - alterId: 0
   cipher: auto
   http-opts:
@@ -201,7 +201,7 @@ proxies:
   average: 236.71
   UpdateDay: '2022-03-21T00:35:16.437700'
   PFirstFoundDay: '2022-03-14T10:30:07.032005'
-  Rank: 8843
+  Rank: 8873
 - name: 72.167.45.6:443@trojan
   server: 72.167.45.6
   port: 443
@@ -216,7 +216,7 @@ proxies:
   average: 187.99
   UpdateDay: '2022-05-03T21:30:33.424541'
   PFirstFoundDay: '2022-03-31T09:34:10.783687'
-  Rank: 6260
+  Rank: 6298
 - name: tky3.ssgnode.ga:443@trojan
   server: tky3.ssgnode.ga
   port: 443
@@ -231,7 +231,7 @@ proxies:
   average: 45.34
   UpdateDay: '2022-05-03T21:30:30.446014'
   PFirstFoundDay: '2022-03-31T03:35:27.638826'
-  Rank: 6167
+  Rank: 6267
 - name: www.zx07.top:443@trojan
   server: www.zx07.top
   port: 443
@@ -246,7 +246,7 @@ proxies:
   average: 41.6
   UpdateDay: '2022-05-03T21:30:30.399378'
   PFirstFoundDay: '2022-03-13T18:24:17.598383'
-  Rank: 6103
+  Rank: 6198
 - name: 184.168.127.50:443@trojan
   server: 184.168.127.50
   port: 443
@@ -261,7 +261,7 @@ proxies:
   average: 254.07
   UpdateDay: '2022-05-03T21:30:33.659322'
   PFirstFoundDay: '2022-03-16T00:32:54.032660'
-  Rank: 5952
+  Rank: 5966
 - name: www.tokyo2023.ga:443@trojan
   server: www.tokyo2023.ga
   port: 443
@@ -276,7 +276,7 @@ proxies:
   average: 50.2
   UpdateDay: '2022-05-03T21:30:33.048328'
   PFirstFoundDay: '2022-03-14T10:29:40.191643'
-  Rank: 5791
+  Rank: 5854
 - name: 45.9.10.103:443@trojan
   server: 45.9.10.103
   type: trojan
@@ -291,22 +291,7 @@ proxies:
   average: 162.13
   UpdateDay: '2022-03-30T11:21:53.634848'
   PFirstFoundDay: '2022-03-23T09:35:36.105483'
-  Rank: 5679
-- name: cscu.wecanfly.top:51132@trojan
-  server: cscu.wecanfly.top
-  port: 51132
-  type: trojan
-  country: "\U0001F1E8\U0001F1F3 CN"
-  password: 5eaea1b9-b977-3391-b7cb-370addb40ce2
-  skip-cert-verify: true
-  udp: true
-  success_rate: 100.0
-  minimum: 34.89
-  maximum: 46.11
-  average: 39.38
-  UpdateDay: '2022-04-03T15:12:55.533673'
-  PFirstFoundDay: '2022-03-13T18:25:19.181411'
-  Rank: 5192
+  Rank: 5725
 - name: www.gomacau.gq:443@trojan
   server: www.gomacau.gq
   type: trojan
@@ -321,7 +306,7 @@ proxies:
   average: 61.31
   UpdateDay: '2022-04-02T15:35:09.325376'
   PFirstFoundDay: '2022-03-14T10:28:14.224892'
-  Rank: 5174
+  Rank: 5254
 - name: www.ggchk.ga:443@trojan
   password: 4ae98d26-b209-4dd5-8e91-bf11d4f10801
   port: 443
@@ -333,7 +318,19 @@ proxies:
   average: 56.06
   UpdateDay: '2022-04-03T15:12:54.456600'
   PFirstFoundDay: '2022-03-11T21:04:39.779731'
-  Rank: 5059
+  Rank: 5149
+- name: www.seetheworldjp.ga:443@trojan
+  password: f42e1a2e-e650-44f4-8d17-bcb68663da18
+  port: 443
+  server: www.seetheworldjp.ga
+  type: trojan
+  success_rate: 100.0
+  minimum: 50.99
+  maximum: 64.88
+  average: 57.86
+  UpdateDay: '2022-04-03T15:12:54.472724'
+  PFirstFoundDay: '2022-03-11T21:01:49.367854'
+  Rank: 5125
 proxy-groups:
 - name: PG-default
   type: fallback
@@ -358,9 +355,9 @@ proxy-groups:
   - 184.168.127.50:443@trojan
   - www.tokyo2023.ga:443@trojan
   - 45.9.10.103:443@trojan
-  - cscu.wecanfly.top:51132@trojan
   - www.gomacau.gq:443@trojan
   - www.ggchk.ga:443@trojan
+  - www.seetheworldjp.ga:443@trojan
   tolerance: 250
 rule-providers:
   anting:
